<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_baseline_assignment_24"
                android:title="@string/menu_notes" />
        <item
                android:id="@+id/nav_courses"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_courses" />

        <item
                android:id="@+id/nav_recent_notes"
                android:icon="@drawable/ic_baseline_remove_red_eye_24"
                android:title="@string/menu_recent_notes" />
    </group>
</menu>